# git-project-xray-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  FINAL.md  FINAL2.md  FINAL3.md  FINAL4.md  FINAL5.md  GETTING_STARTED_UV.md  INSTALL.md  LLM_reframe.md  README.md  XRAY-COMPLETE-SPEC.md  XRAY-LITE-COMPLETE-SPEC.md  debug_treesitter.py  getting_started.md  install.sh  install_uv.sh  mcp-config-generator.py  pyproject.toml  roadmap.md  run_server.py  test_comby.py  test_cross_file_fix.py  test_installation.py  test_mcp.py  test_parser_syntax.py  test_parsers.py  test_xray.py  test_xray_simple.py  uninstall.sh
.github/workflows/: auto-publish.yml  auto-tag.yml  publish.yml
.xray/: xray.db  xray.db-shm
sessions/: sessions-config.json
src/xray/: __init__.py  mcp_server.py
src/xray/core/: __init__.py  impact.py  indexer.py  query.py  schema.py
src/xray/parsers/: __init__.py  base.py  go.py  javascript.py  python.py  typescript.py
src/xray_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test-comby-project/: main.py
test_samples/: test.go  test.js  test.py  test.ts  test_class_expression.js
tests/: __init__.py
