[project]
name = "xray"
version = "0.1.0"
description = "XRAY: Fast code intelligence for AI assistants"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Srijan Shukla", email = "srijanshukla18@gmail.com" }
]
keywords = ["mcp", "code-intelligence", "ai-assistant", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-javascript>=0.23.1", 
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.23.4",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/srijanshukla18/xray"
Repository = "https://github.com/srijanshukla18/xray"
Issues = "https://github.com/srijanshukla18/xray/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
xray-mcp = "xray.mcp_server:main"