[project]
name = "xray"
version = "0.6.1"
description = "XRAY: Progressive code intelligence for AI assistants - Map, Find, Impact"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Srijan Shukla", email = "srijanshukla18@gmail.com" }
]
keywords = ["mcp", "code-intelligence", "ai-assistant", "code-analysis", "ast-grep", "structural-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
    "ast-grep-cli>=0.39.0",
    "thefuzz>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/srijanshukla18/xray"
Repository = "https://github.com/srijanshukla18/xray"
Issues = "https://github.com/srijanshukla18/xray/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
xray-mcp = "xray.mcp_server:main"